--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="https://www.linkpicture.com/q/WhatsApp-Image-2022-01-27-at-5.51.20-PM.jpeg" alt="img">
+          
         </div>
       </div>
       <div class="col-right">
@@ -227,9 +227,9 @@
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
-        <div class="social-item">
+<!--         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
-        </div>
+        </div> -->
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
         </div>
