--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src = "https://www.google.com/url?sa=i&url=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fgirl-back&psig=AOvVaw1ITP3HIRkAIrRAt1vu8MiW&ust=1667441713784000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCJCBzcm2jvsCFQAAAAAdAAAAABAE">
+          <img src = "https://i.pinimg.com/550x/a1/e5/1d/a1e51ddc48b17c1e87c9c6cefab16e23.jpg" alt = "img">
         </div>
       </div>
       <div class="col-right">
