--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
 
   <!-- About Section -->
   <section id="about">
-    <div class="about container">
+<!--     <div class="about container">
       <div class="col-left">
         <div class="about-img">
           <img src = "https://i.pinimg.com/550x/a1/e5/1d/a1e51ddc48b17c1e87c9c6cefab16e23.jpg" alt = "img">
         </div>
-      </div>
+      </div> -->
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Student at BVRITH</h2>
