--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
   <!-- End Projects Section -->
 
   <!-- About Section -->
-  <section id="about">
+<!--   <section id="about"> -->
 <!--     <div class="about container">
       <div class="col-left">
         <div class="about-img">
           <img src = "https://i.pinimg.com/550x/a1/e5/1d/a1e51ddc48b17c1e87c9c6cefab16e23.jpg" alt = "img">
         </div>
       </div> -->
-      <div class="col-right">
+<!--       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Student at BVRITH</h2>
         <p>My name is Roshni, I have completed my 10th with 9.7 CGPA & 12th with 96% from State Board.<br>I am currently pursuing my Bachelors of Technology in Computer Science Engineering from BV RAJU COLLEGE OF ENGINEERING, FOR WOMEN, Bachupally, Hyderabad.My hobbies are Painting, Reading books .I have completed the certified computer languages course in C, C++, HTML, CSS, JAVASCRIPT, NODE.JS from STUDYOWL EDUCATION PVT LTD.
@@ -176,7 +176,7 @@
       </div>
     </div>
   </section>
-  <!-- End About Section -->
+  <!-- End About Section --> -->
 
   <!-- Contact Section -->
   <section id="contact">
